--- a/Thesis/LaTeX/Appendices.tex
+++ b/Thesis/LaTeX/Appendices.tex
@@ -140,7 +140,7 @@
 	\subsection{The current state of the customer service chatbot.}
 	\subsubsection{For what purposes is the chatbot mainly used? Is it rather for \acrshort{faq}, is it also for complaints, to sell something or are there other examples for which the bot can be used?}
 	
-	I'm going to talk mainly about Telenet residential. You also have Telenet Business, they also have a chatbot. I'll just explain at a high level what they have. Telenet Business have more of a proactive chatbot that will pop up based on certain criteria. That's linked to a program, Marketo, a marketing & leads generation platform. It does certain checks when you visit the Telenet Business website and if these checks are validated, the chatbot pops up. This chatbot is very limited at the moment. So, they have their platform, so to speak. For Telenet Residential, we use a different platform. We had many chatbots available like askHugo That was for motivating new customers to buy a Hugo subscription from us. This has been closed down since two years ago. We also had others like askPlay which has also been closed down. Currently we only have two. One is the Messenger bot, but that is not really a chatbot because it is rule-base and not \acrshort{ai}-driven. So, it's not an intelligent bot, it has a flow that has to be strictly adhered to by clicking buttons. If you type something, you fall out of the flow. You do end up with an advisor who can help you further but the chatbot itself will not respond. This is because it's linked to the platform we use now, and that 'dumb' bot is mainly focused on customer service. For example, the flow of technical questions is much more extensive than the other sections. We of course hope that the customer is helped by the bot but there is still a large percentage that ends up with an agent. But that's normal in a way because the bot doesn't know everything and isn't intelligent. But it's already something to help the customer and especially for the agent himself that he already has context from the questions asked by the chatbot. Because of this, they don't have to do these checks anymore. This makes it a lot more efficient for them because they already know what it is about when the customer comes to them, and they can skip those questions. This makes the conversations shorter and more efficient.
+	I'm going to talk mainly about Telenet residential. You also have Telenet Business, they also have a chatbot. I'll just explain at a high level what they have. Telenet Business have more of a proactive chatbot that will pop up based on certain criteria. That's linked to a program, Marketo, a marketing \& leads generation platform. It does certain checks when you visit the Telenet Business website and if these checks are validated, the chatbot pops up. This chatbot is very limited at the moment. So, they have their platform, so to speak. For Telenet Residential, we use a different platform. We had many chatbots available like askHugo That was for motivating new customers to buy a Hugo subscription from us. This has been closed down since two years ago. We also had others like askPlay which has also been closed down. Currently we only have two. One is the Messenger bot, but that is not really a chatbot because it is rule-base and not \acrshort{ai}-driven. So, it's not an intelligent bot, it has a flow that has to be strictly adhered to by clicking buttons. If you type something, you fall out of the flow. You do end up with an advisor who can help you further but the chatbot itself will not respond. This is because it's linked to the platform we use now, and that 'dumb' bot is mainly focused on customer service. For example, the flow of technical questions is much more extensive than the other sections. We of course hope that the customer is helped by the bot but there is still a large percentage that ends up with an agent. But that's normal in a way because the bot doesn't know everything and isn't intelligent. But it's already something to help the customer and especially for the agent himself that he already has context from the questions asked by the chatbot. Because of this, they don't have to do these checks anymore. This makes it a lot more efficient for them because they already know what it is about when the customer comes to them, and they can skip those questions. This makes the conversations shorter and more efficient.
 	There is also a subscription window. This also gets them to us, but the flow is much shorter and much more restricted. There is way less inflow and less contact. The bulk simply has a problem or a question about their subscription. So, we have not invested in that at the moment.\\
 	\break
 	We are now in a decision phase to switch to a new platform and build something decent. A real \acrshort{nlp} platform where we can build everything from automation instead of the predefined flows.
