--- a/Thesis/LaTeX/LiteratureStudy.tex
+++ b/Thesis/LaTeX/LiteratureStudy.tex
@@ -12,7 +12,7 @@ The definition given by the dictionary goes as follows: “A computer program de
 	\item A chatbot is an artificial intelligence program and a \acrfull{hci} model \citep{Bansal2018}.
 	\item A chatbot is a software which act as tool that able to interact with human using human’s natural language with aim to assist human daily task \citep{Muizzah2021}.
 	\item A chatbot  is  a  computer  program  which  responds  like  an  intelligent  entity when  conversed  with \citep{Khanna2015}.
-\end{enumerate}\\
+\end{enumerate}
 \break
 Multiple types of chatbots exist, going from text-based to voice-based to a combination of both \citep{Radziwil2021}. Below is a more detailed taxonomy of chatbots.\\
 
